# CEqual

./: .gitignore  CMakeLists.txt  README.md  cequal  makefile
cequal-compiler/: CMakeLists.txt
cequal-compiler/src/: KaleidoscopeJIT.hpp  main.cpp
cequal-interpreter/: CMakeLists.txt
cequal-interpreter/src/: util.cpp
cequal-interpreter/src/include/: util.hpp
cequal-interpreter/src/parsers/: cequal.l  cequal.y
cequal-interpreter/testprogs/: bubblesort.ce  fatorial_while.ce  fibo.ce  test.ce  test_little.ce  testes_condicionais.ce  testes_declaracoes.ce  testes_paradas.ce
learning/calculadora/: backupL  calculator  calculator.l  calculator.tab.c  calculator.y  lex.yy.c  makefile
learning/syntaxtest/: lex.yy.c  makefile  syntax  syntax.l  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y
learning/syntaxtest/testprogs/: bubblsort.ce  dec_test.ce  dec_test_w.ce  test_little.ce
learning/wordcount/: fwc  lex.yy.c  wc.l
src/: cequal.l  cequal.y  makefile  util.cpp
src/classes/: AST.cpp  ASTExpression.cpp  ASTLiteral.cpp  Literal.cpp  LiteralBool.cpp  LiteralInt.cpp
src/classes/ast/: AST.cpp  ASTArrayInit.cpp  ASTBlock.cpp  ASTCallProc.cpp  ASTCmdAtrib.cpp  ASTCmdFor.cpp  ASTCmdIf.cpp  ASTCmdRead.cpp  ASTCmdWhile.cpp  ASTCmdWrite.cpp  ASTCmds.cpp  ASTDecSub.cpp  ASTDecVar.cpp  ASTExpList.cpp  ASTListDec.cpp  (+8 more)
src/include/: util.hpp
src/langdefs/: cequal.l  cequal.y
src/parsers/: cequal.l  cequal.y
src/testprogs/: dec_test.ce  dec_test_w.ce
testprogs/: bubblesort.ce  dec_test.ce  fatorial.ce  fatorial_recursivo.ce  fatorial_while.ce  test_little.ce
(+89 files in other folders)
